[package]
name = "jsonrpc-utils"
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.5.6", features = ["ws"] }
futures-core = "0.3.21"
futures-util = "0.3.21"
hex = "0.4.3"
jsonrpc-core = "18.0.0"
rand = "0.8.5"
tokio = { version = "1.19.0", features = ["sync", "macros"] }

[dev-dependencies]
async-stream = "0.3.3"
tokio = { version = "1.19.0", features = ["rt-multi-thread"] }
tokio-stream = { version = "0.1.9", features = ["sync"] }
tokio-util = { version = "0.7.3", features = ["codec"] }
