[package]
name = "jsonrpc-utils-macros"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sopium/jsonrpc-utils"
description = "Proc-macros for jsonrpc-utils"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.39"
quote = "1.0.18"
syn = { version = "2", features = ["full"] }
